--- a/software/lib/platformio.ini
+++ b/software/lib/platformio.ini
@@ -12,13 +12,29 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_extra_dirs = lib
+test_framework = unity
+test_port = COM99 
 
 [env:mega]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_extra_dirs = lib
+test_framework = unity
+test_port = COM99 
 
 [env:esp32]
 platform = espressif32
 board = esp32dev
 framework = arduino
+lib_extra_dirs = lib
+test_framework = unity
+test_port = COM99 
+
+[env:native]
+platform = native
+build_flags =
+  -Wall
+  -Wextra
+  -Wpedantic
